# TCP-sample

./: .gitignore  .gitmodules  Makefile.am  README.md  acinclude.m4  configure.ac  setup_dpdk_mtcp.sh
conf/: mtcp.conf
dpdk/mk/: rte.app.mk
mperf/: automake.mk  cjson.c  cjson.h  client.c  main.c  mperf.h  mperf_api.c  mperf_api.h  mperf_config.c  mperf_config.h  mperf_error.c  mperf_thread.c  mperf_thread.h  mperf_util.c  mperf_util.h  mperf_worker.c  mperf_worker.h  net.c  net.h  portable_endian.h  server.c  units.c  units.h
mtcp/: Makefile.in  configure
mtcp/apps/apache_benchmark/include/: ap_config_auto.h
mtcp/apps/apache_benchmark/srclib/apr/: apr-1-config  apr.pc  config.nice  exports.c  libtool
mtcp/apps/apache_benchmark/srclib/apr-util/: apr-util.pc  apu-1-config  config.nice  export_vars.sh  exports.c
mtcp/apps/apache_benchmark/srclib/apr-util/.libs/: libaprutil-1.lai
mtcp/apps/apache_benchmark/srclib/apr-util/xml/expat/: libtool
mtcp/apps/apache_benchmark/srclib/apr/.libs/: libapr-1.lai
mtcp/apps/apache_benchmark/srclib/apr/include/arch/unix/: apr_private.h
mtcp/apps/apache_benchmark/srclib/pcre/: dftables
src/: automake.mk  echo-client.c  echo-mtcp-server.c  echo-server.c
